[package]
name = "space-out"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
byte-unit = "5.1.6"
dirs = "5.0.1"
serde = { version = "1.0.215", features = ["derive"] }
sysinfo = "0.32.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
slint = "1.8.0"
clap = "4.5.21"

[build-dependencies]
slint-build = "1.8.0"
